[package]
name = "button-led"
version = "0.1.0"
edition = "2021"

[dependencies]
# cortex-m-rt = "0.7.3"
# embedded-hal = "1.0.0"
# microbit-v2 = "0.15.1"
# panic-halt = "0.2.0"

defmt = "0.3.5"
defmt-rtt = "0.4.0"
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
panic-probe = "0.3.1"

# embassy-futures = { version = "0.1.0" }
# embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-executor = { version = "0.6.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.2.0", features = ["defmt", "nrf52833", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
# embassy-net = { version = "0.4.0", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet"] }
# embassy-usb = { version = "0.3.0", features = ["defmt"] }
# embedded-io = { version = "0.6.0", features = ["defmt-03"]  }
# embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
# embassy-net-esp-hosted = { version = "0.1.0", features = ["defmt"] }
# embassy-net-enc28j60 = { version = "0.1.0", features = ["defmt"] }

# [patch.crates-io]
# embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "631fec8d092b247b02d4279b8087cceb49146575" }
# embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "631fec8d092b247b02d4279b8087cceb49146575" }
# embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "631fec8d092b247b02d4279b8087cceb49146575" }

[profile.release]
debug = 2